@@ -11,7 +11,6 @@ import uk.gov.hmcts.reform.civil.config.CrossAccessUserConfiguration;
 import uk.gov.hmcts.reform.civil.service.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +27,7 @@ public class CaseAssignmentSupportService {
 
         List<CaseAssignedUserRole> userRoles =
             caseAccessDataStoreApi.getUserRoles(caaAccessToken, authToken, caseIds).getCaseAssignedUserRoles().stream()
-                .filter(role -> role.getUserId().equals(userId)).collect(Collectors.toList());
+                .filter(role -> role.getUserId().equals(userId)).toList();
 
         List<CaseAssignedUserRoleWithOrganisation> userRolesWithOrganisation =
             userRoles.stream().map(role -> CaseAssignedUserRoleWithOrganisation.builder()
@@ -37,7 +36,7 @@ public class CaseAssignmentSupportService {
                 .userId(role.getUserId())
                 .organisationId(organisationId)
                 .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
         CaseAssignedUserRolesRequest request = CaseAssignedUserRolesRequest.builder()
             .caseAssignedUserRoles(userRolesWithOrganisation).build();
